--- a/settings/project.json
+++ b/settings/project.json
@@ -1,7 +1,9 @@
 {
   "group-list": [
     "default",
-    "UIIII"
+    "UIIII",
+    "hero",
+    "wall"
   ],
   "collision-matrix": [
     [
@@ -9,6 +11,18 @@
     ],
     [
       false,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      true
+    ],
+    [
+      false,
+      false,
+      true,
       false
     ]
   ],
@@ -35,6 +49,5 @@
     "live": {
       "enable": false
     }
-  },
-  "start-scene": "current"
+  }
 }
