--- a/settings/project.json
+++ b/settings/project.json
@@ -3,7 +3,12 @@
     "default",
     "UIIII",
     "hero",
-    "wall"
+    "wall",
+    "edge",
+    "pocket",
+    "ball",
+    "whiteBall",
+    "cue"
   ],
   "collision-matrix": [
     [
@@ -20,6 +25,58 @@
       true
     ],
     [
+      false,
+      false,
+      true,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      false,
+      null,
+      true,
+      true
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      false,
+      false,
+      true,
+      true
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      true,
+      true,
+      true,
+      true
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      true,
+      true,
+      true,
+      false,
+      true
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      false,
       false,
       false,
       true,
@@ -49,6 +106,5 @@
     "live": {
       "enable": false
     }
-  },
-  "start-scene": "current"
+  }
 }
