--- a/settings/project.json
+++ b/settings/project.json
@@ -83,8 +83,13 @@
       false
     ]
   ],
-  "excluded-modules": [],
-  "last-module-event-record-time": 1583461139416,
+  "excluded-modules": [
+    "Spine Skeleton",
+    "TiledMap",
+    "3D",
+    "3D Primitive"
+  ],
+  "last-module-event-record-time": 1586254514999,
   "design-resolution-width": 960,
   "design-resolution-height": 640,
   "fit-width": false,
