--- a/settings/project.json
+++ b/settings/project.json
@@ -8,27 +8,57 @@
     "pocket",
     "ball",
     "whiteBall",
-    "cue"
+    "cue",
+    "hand"
   ],
   "collision-matrix": [
     [
+      true,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
       true
     ],
     [
       false,
-      false
+      false,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      true
     ],
     [
       false,
       false,
       false,
+      true,
+      null,
+      null,
+      null,
+      null,
+      null,
       true
     ],
     [
       false,
       false,
       true,
-      false
+      false,
+      null,
+      null,
+      null,
+      null,
+      null,
+      true
     ],
     [
       false,
@@ -38,6 +68,8 @@
       false,
       null,
       true,
+      true,
+      null,
       true
     ],
     [
@@ -48,6 +80,8 @@
       false,
       false,
       true,
+      true,
+      null,
       true
     ],
     [
@@ -58,6 +92,8 @@
       true,
       true,
       true,
+      true,
+      null,
       true
     ],
     [
@@ -69,6 +105,7 @@
       true,
       true,
       false,
+      true,
       true
     ],
     [
@@ -79,6 +116,19 @@
       false,
       false,
       false,
+      true,
+      false,
+      true
+    ],
+    [
+      true,
+      true,
+      true,
+      true,
+      true,
+      true,
+      true,
+      true,
       true,
       false
     ]
